[package]
name = "online_offline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ['ws'] }
axum-macros = "0.4.0"
deadpool-redis = "0.14.0"
futures = "0.3.30"
redis = { version = "0.24.0", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
